fix(diff-view)(panel): Fix horizontal overflow of PR view comments

--- a/code-review-management/app/(pages)/[username]/[repo_name]/pull/[id]/_components/PRViewComment/PRViewComment.module.css
+++ b/code-review-management/app/(pages)/[username]/[repo_name]/pull/[id]/_components/PRViewComment/PRViewComment.module.css
@@ -18,6 +18,10 @@
   gap: var(--spacer-8);
 }
 
+[data-view="activity-panel"] .commentContent {
+  min-width: 0;
+}
+
 .usernameAndDate {
   display: flex;
   align-items: center;
@@ -31,7 +35,8 @@
 
 .date {
   color: var(--text-tertiary);
-  font-size: 0.9375rem; /* 1px smaller than username. Using rem here for accessibility*/
+  font-size: 0.9375rem;
+  /* 1px smaller than username. Using rem here for accessibility*/
 }
 
 [data-view="activity-panel"] .date {
